[fix] scrollbar on the home page

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -61,6 +61,7 @@ body {
   color: var(--text-clr);
   main {
     padding: $main-padding;
+    padding-top: 0.125rem;
     @media screen and (prefers-color-scheme: dark) {
       &::before {
         content: '';
